@@ -12,13 +12,31 @@
         body {
             background: #000;
         }
+        iframe {
+            width: 100%;
+            height: 320px;
+            border:0;
+            margin:10px;
+            padding: 0;
+        }
+
+        #yourshoutbox_img103262550 {
+            overflow: hidden;
+            padding: 0;
+        }
+
+        #yourshoutbox103262550 {
+            overflow: hidden;
+            padding: 0;
+            border: 0;
+        }
     </style>
     <body>
-        <script>
-            document.write('<div id="yourshoutbox_img103262550" style="overflow: hidden; padding: 0;">');
-            document.write('<div id="yourshoutbox103262550" style="overflow: hidden; padding: 0; border:0;">');
-            document.write('<iframe src="http://www4.yourshoutbox.com/shoutbox/sb.php?key=103262550" scrolling="yes" frameborder="0" width="100%" height="320px" style="border:0; margin:10px; padding: 0;">');
-            document.write('</iframe></div></div>');
-        </script>
+        <div id="yourshoutbox_img103262550">
+            <div id="yourshoutbox103262550">
+                <iframe src="http://www4.yourshoutbox.com/shoutbox/sb.php?key=103262550" scrolling="yes" frameborder="0">
+                </iframe>
+            </div>
+        </div>
     </body>
 </html>
