@@ -14,7 +14,7 @@ dependencies {
 
 android {
     compileSdkVersion 8
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     sourceSets {
         main {
@@ -25,6 +25,19 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file('release.keystore')
+            storePassword System.getenv("KSTOREPWD")
+            keyAlias 'mhyh-radio'
+            keyPassword System.getenv("KEYPWD")
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
         }
     }
 }
